--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -20,7 +20,7 @@ html,body{
 
   font-family: 'Comfortaa', sans-serif;
 	 height: 100%;
-	width: 100%;
+	 width: 100%;
 	
 	line-height: 1;
 	font-size: 14px;
@@ -37,26 +37,12 @@ button{cursor: pointer;}
 button::-moz-focus-inner {padding:0;border:0;}
 a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
-ul li{list-style: none;}
+ul li{list-style: none; text-decoration: none;}
 img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 
-.container {
-	max-width: 1440px;
-    // display: flex;
-    // flex-direction: column;
-    //   margin-inline:auto ;
-
-	
-	margin: 0 auto;
-	// padding: 0 60px;
-	display: flex;
-	flex-direction: column;
-
-	   justify-content: space-between;
-  }
 
  
 
