--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,9 @@
+:root {
+	 --background-color: #999d9e,
+	 --background-color-services:#fff;
+  }
+
+
 *{
 	padding: 0;
 	margin: 0;
@@ -27,7 +33,7 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-	   background-color: #999d9e;
+	    background-color: var(--background-color);
 	
 }
 input,button,textarea{font-family:inherit;}
@@ -53,5 +59,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	scroll-snap-align: start;
   }
  
-  
+  .services {
+	background-color: var(--background-color-services);
+  }
   
