--- a/src/app/navig/navig.page.module.scss
+++ b/src/app/navig/navig.page.module.scss
@@ -4,7 +4,7 @@
      align-items: center;
    
     margin-top: 7%;
-    color: #ffffff;
+      color: #ffffff;
    
       //  max-width: 1440px;
    
@@ -38,7 +38,10 @@ height: 5vh;
   }
   .menu_550 {
     display: none;
-  
+    a {
+      text-decoration: none;
+      //  color: #fff; 
+    }
   }
   .point {
     display: flex;
@@ -88,10 +91,10 @@ height: 5vh;
         font-size: 2.5vw;
        
       }
-      a {
-        text-decoration: none;
-        color: #fff; 
-      }
+      // a {
+      //   text-decoration: none;
+      //   color: #fff; 
+      // }
     }
   }
   
