--- a/src/app/navig/burger/burger.scss
+++ b/src/app/navig/burger/burger.scss
@@ -9,7 +9,7 @@ font-size: 18px;
   height: 1px;
   cursor: pointer; 
   z-index: 3;
-  color: #505050;
+  //  color: #505050;
 }
 
 // .menu-btn > span,
@@ -67,7 +67,7 @@ font-size: 18px;
 
     justify-content: center;
    padding:38px 24px;
-  color: #505050;
+    color: #505050;
 
   font-size: 28px;
   font-weight: 600;
