--- a/src/app/services/section_services_2/section_services_2.module.scss
+++ b/src/app/services/section_services_2/section_services_2.module.scss
@@ -7,9 +7,17 @@
 }
 .container {
    
-    max-width: 100em;
+    // max-width: 100em;
     margin: 0 auto;
     padding: 60% 10% 0 10%;
+}
+.block_line_number {
+    width: 100%;
+  
+}
+.number {
+   color: #bbbcbd; 
+   margin-bottom: 2%;
 }
 .line {
     width: 100%;
@@ -17,7 +25,7 @@
     border: 1px solid #bbbcbd;
 }
 .title {
-    padding: 10% 0;
+    padding: 20% 0 15% 0;
     font-size: calc(clamp(2.8em, 5vw, 4.5em)* .75);
     line-height: 1.065;
 }
@@ -26,7 +34,7 @@
     flex-direction: column;
 }
 .design_block {
-    padding: 15% 0;
+    padding: 10% 0;
 }
 .design_title {
     font-size: clamp(1.55em, 2.3vw, 2.5em);
@@ -40,9 +48,36 @@
     color: #252525;
 }
 
+
+
+ @media (min-width: 740px) and (max-width: 100vw) {
+    .title {
+        padding: 9vw 0 8vw 0;
+        
+    }
+    .block_section {
+        // display: flex;
+        flex-direction: row;
+        gap: 7vw;
+    }
+    .design_title {
+        font-size: clamp(1.65em, 2.3vw, 2.5em);
+        line-height: 1.45;
+    
+    }
+    .design_text {
+       padding-top: 10%;
+        font-size: clamp(0.8em, 2vw, 1.3em);
+        line-height: 1.66;
+        color: #252525;
+    }
+}
+
+
  @media (min-width: 740px) and (max-width: 100vw) {
     .section_services_2 {
       
       background: linear-gradient(to bottom, #ffffff , #eff0f1 50%);
       }
 }
+
