--- a/src/app/services/services.module.scss
+++ b/src/app/services/services.module.scss
@@ -1,9 +1,4 @@
-// .background_comp_1 {
-//     width: 100%;
-//     height: 700px;
-//     background-color: #e9eaeb ;
 
-//  }
 .container_services {
     position: relative;
     z-index: 2;
@@ -17,26 +12,31 @@
 
     margin-top: 20%;
 
-    padding: 0 10%;
-    font-size: calc(clamp(3em, 6vw, 7em));
+  
+    font-size: calc(clamp(2em, 5vw, 6em));
+    h2 {
+        width: 90%;
+
+    }
 }
 .line {
     position: relative;
-    max-width: 1000px;
+    max-width: 80vw;
     height: 1px;
-    margin-top: 25%;
+    margin-top: 17%;
 
     background-color: #0a0a0a62;
 }
 .circle {
     position: absolute;
-    top: -70px;
+    top: -55px;
     right: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 140px;
-    height: 140px;
+    width: 110px;
+    height: 110px;
+  
     border-radius: 50%;
     background-color: #457bff;
 }
@@ -45,7 +45,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    margin-top: 30%;
+    margin-top: 25%;
     width: 100%;
     color: #000;
 
@@ -68,7 +68,14 @@
 }
 
 @media (min-width: 740px) and (max-width: 100vw) {
+    .line {
+     
+        margin-top: 15%;
+    
+      
+    }
     .text_block {
+        margin-top: 14%;
         img {
             margin-top: 0%;
         }
@@ -79,5 +86,29 @@
             padding-top: 20vh;
             margin-right: 5%;
         }
+    }
+}
+
+ @media (min-width: 1000px) and (max-width: 1300px) {
+    .circle {
+       
+        top: -70px;
+      
+        width: 140px;
+        height: 140px;
+      
+      
+    }
+}
+
+@media (min-width: 1300px) and (max-width: 100vw) {
+    .circle {
+       
+        top: -80px;
+      
+        width: 160px;
+        height: 160px;
+      
+      
     }
 }
