--- a/src/app/footer/footer.page.module.scss
+++ b/src/app/footer/footer.page.module.scss
@@ -1,10 +1,10 @@
 .footer {
   background-color: #1c1d20;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 .footer_container {
-  
+  padding: 0 50px;
   max-width: 1440px;
   padding-top: 10%;
 margin: 0 auto;
@@ -85,6 +85,7 @@ gap: 20px;
 .input_email ,.input_phone{
 border: 1px solid #ffffff39;
 width: 90%;
+
 height: 60px;
 margin: 0 auto;
 border-radius:40px;
@@ -146,7 +147,61 @@ img {
 
 
  @media (min-width: 740px) and (max-width: 1200px) {
+  .footer_container {
+    padding: 0 90px;
+    max-width: 1440px;
+    padding-top: 10%;
+  margin: 0 auto;
+  }
+  .block_input {
+  
+    display: flex;
+    flex-direction: row;
+  max-width: 800px;
+    }
+    .line {
+    //  display: none;
+    
+    }
   .block_socials {
     display: flex;
+   
+    flex-direction: row-reverse;
+    justify-content: space-between;
   }
+  .input_email ,.input_phone{
+    border: 1px solid #ffffff39;
+    width: 70%;
+    height: 60px;
+    margin: 0 auto;
+    border-radius:40px;
+    display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white; 
+      font-size: 16px; 
+      text-align: center;
+    }
+    
+
+  .socials {
+  
+     ul {
+      
+ display: flex;
+ justify-content:space-around;
+ font-size: 18px;
+ gap: 20px;
+     }
+ 
+ }
+ .block_version {
+
+width: 50%;
+display: flex;
+// justify-content: space-between;
+justify-content: flex-start;
+gap:120px;
+
+}
 }
